--- a/hotelex/assets/css/dados_propri.css
+++ b/hotelex/assets/css/dados_propri.css
@@ -350,86 +350,37 @@ h2{
   color: red;
 }
 /* Estilize o tooltip */
-.testezex{
+/* .testezex{
   position: absolute;
   top:100px;
   right: 25px;
   display: inline-block;
 }
-/* tooltip1 */
 .content-tooltips{
   position: relative;
   cursor:pointer;
   padding: 20px;
-  bottom: 60px;
-  margin-bottom:90px;
+  bottom: 100px;
+  margin-bottom:10vh;
   left: 370px;
+  top:-61.5vh;
 }
-.fa{
+.fa-solid{
   font-size: 30px;
   padding: 12px;
-  margin:20px 0 0 0;
-  box-shadow: inset 2px 2px 5px #d3d3d3, 
-  inset -2px -2px 5px #fff;
   border-radius:5px;
-}
-.fa:hover{
-  opacity: 0.8;
-}
-.content-tooltips .tooltip-text{
-  width: 12px;
-  background-color: #000;
-  color: #fff;
-  text-align: center;
-  padding: 10px 0;
-  border-radius: 10px;
-  left: 140%;
-  margin-left: -200%;
-  top: 500px;
-  z-index: 1;
-  bottom: 10%;
-  position: absolute;
-  /* visibility: hidden;
-  opacity: 0;
-  transition: opacity 0.5s; */
-}
-/* .content-tooltips .tooltip-text::after{
-  content: "";
-  border-style: solid;
-  border-width: 6px;
-  border-color:transparent transparent transparent black;
-  position: absolute;
-  top:100%;
-  left: 100%;
-  margin-top: -25%;
-} */
-.content-tooltips:hover .tooltip-text{
-  opacity: 1;
-  visibility: visible;
-}
-.a{
-  text-decoration: none;
   color: #000;
-}
-/*tooltips 2*/
-.content-tooltips{
+  margin-top:100px;
+  display: block;
   position: relative;
-  cursor:pointer;
-  padding: 20px;
-  bottom: -50px;
-  margin-bottom:90px;
-  left: 370px;
-}
-.fa{
-  font-size: 30px;
-  padding: 12px;
-  margin: 20px 0 0 0;
-  box-shadow: inset 2px 2px 5px #d3d3d3, 
-  inset -2px -2px 5px #fff;
-  border-radius:5px;
+  top:51.7vh;
+  left: 9vh;
 }
 .fa:hover{
   opacity: 0.8;
+}
+.info{
+  text-align: center;
 }
 .content-tooltips .tooltip-text{
   width: 120px;
@@ -444,11 +395,11 @@ h2{
   z-index: 1;
   bottom: 10%;
   position: relative;
-  /* visibility: hidden;
+  visibility: hidden;
   opacity: 0;
-  transition: opacity 0.5s; */
+  transition: opacity 0.5s;
 }
-/* .content-tooltips .tooltip-text::after{
+.content-tooltips .tooltip-text::after{
   content: "";
   border-style: solid;
   border-width: 6px;
@@ -457,134 +408,45 @@ h2{
   top:100%;
   left: 100%;
   margin-top: -25%;
-} */
+}
 .content-tooltips:hover .tooltip-text{
   opacity: 1;
   visibility: visible;
+} */
+.testezex {
+  position: relative;
 }
-.a{
-  text-decoration: none;
+
+.tooltip-container {
+  display: block;
+}
+
+.content-tooltips {
+  display: inline-block;
+  position: absolute;
+  cursor: pointer;
+  padding: 20px;
+  margin-top: -14vh;
+  left: 90%;
+  /* transform: translateY(-50%); */
+  background-color: #000;
+  color: #fff;
+  text-align: center;
+  border-radius: 10px;
+  opacity: 0;
+  transition: opacity 0.5s;
+}
+.info{
+  position: relative;
+  top:-5vh;
+  font-size: 40px;
+  left: 97vh;
+  margin-top: 12vh;
   color: #000;
 }
-/*tooltips 2*/
-.content-tooltips2{
-  position: relative;
-  cursor:pointer;
-  padding: 20px;
-  bottom: -50px;
-  margin-bottom:90px;
-  left: 370px;
-}
-.content-tooltips2 .tooltip-text2{
-  width: 120px;
-  background-color: #000;
-  color: #fff;
-  text-align: center;
-  padding: 10px 0;
-  border-radius: 10px;
-  left: 140%;
-  margin-left: -200%;
-  top: 500px;
-  z-index: 1;
-  bottom: 10%;
-  position: relative;
-  /* visibility: hidden;
-  opacity: 0;
-  transition: opacity 0.5s; */
-}
-/* .content-tooltips .tooltip-text::after{
-  content: "";
-  border-style: solid;
-  border-width: 6px;
-  border-color:transparent transparent transparent black;
-  position: absolute;
-  top:100%;
-  left: 100%;
-  margin-top: -25%;
-} */
-.content-tooltips2:hover .tooltip-text2{
+
+.tooltip-container:hover .content-tooltips {
   opacity: 1;
-  visibility: visible;
-}
-/*tooltips3*/
-.content-tooltips3{
-  position: relative;
-  cursor:pointer;
-  padding: 20px;
-  bottom: -50px;
-  margin-bottom:90px;
-  left: 370px;
-}
-.content-tooltips3 .tooltip-text3{
-  width: 120px;
-  background-color: #000;
-  color: #fff;
-  text-align: center;
-  padding: 10px 0;
-  border-radius: 10px;
-  left: 140%;
-  margin-left: -200%;
-  top: 500px;
-  z-index: 1;
-  bottom: 10%;
-  position: relative;
-  /* visibility: hidden;
-  opacity: 0;
-  transition: opacity 0.5s; */
-}
-/* .content-tooltips .tooltip-text::after{
-  content: "";
-  border-style: solid;
-  border-width: 6px;
-  border-color:transparent transparent transparent black;
-  position: absolute;
-  top:100%;
-  left: 100%;
-  margin-top: -25%;
-} */
-.content-tooltips3:hover .tooltip-text3{
-  opacity: 1;
-  visibility: visible;
-}
-/*tooltips 4*/
-.content-tooltips4{
-  position: relative;
-  cursor:pointer;
-  padding: 20px;
-  bottom: -50px;
-  margin-bottom:90px;
-  left: 370px;
-}
-.content-tooltips4 .tooltip-text4{
-  width: 120px;
-  background-color: #000;
-  color: #fff;
-  text-align: center;
-  padding: 10px 0;
-  border-radius: 10px;
-  left: 140%;
-  margin-left: -200%;
-  top: 500px;
-  z-index: 1;
-  bottom: 10%;
-  position: relative;
-  /* visibility: hidden;
-  opacity: 0;
-  transition: opacity 0.5s; */
-}
-/* .content-tooltips4 .tooltip-text4::after{
-  content: "";
-  border-style: solid;
-  border-width: 6px;
-  border-color:transparent transparent transparent black;
-  position: absolute;
-  top:100%;
-  left: 100%;
-  margin-top: -25%;
-} */
-.content-tooltips4:hover .tooltip-text4{
-  opacity: 1;
-  visibility: visible;
 }
 #imagex {
   left: 100px; /* Ajuste conforme necessário */
