--- a/hotelex/assets/css/pagina_inicial.css
+++ b/hotelex/assets/css/pagina_inicial.css
@@ -17,6 +17,7 @@
   width: 500%;
   right: 400%;
   display: block;
+  text-align: center;
 }
 .card2{
   top:0px;
@@ -65,8 +66,8 @@ button{
 }
 /*fundo do botex*/
 button:hover{
-    background-color: #000000;
-    color: #fff;
+  background-color: #000000;
+  color: #fff;
 }
 h1{
   position:absolute;
@@ -107,7 +108,7 @@ h1-2{
 h1-3{
   position:absolute;
   width: 11px;
-  top:13vh;
+  top:18vh;
   left: 114vh;
   font-size: 30px;
   display: flex;
@@ -116,18 +117,33 @@ h1-3{
   font-family:'Roboto', sans-serif;
   white-space: nowrap;
 }
+h1-4{
+  background-color: #eadd93;
+  /* border-color: #39371F; */
+  padding: 12px;
+  font-size: 16pt;
+  border-width: 5px;
+  border-radius: 4px;
+  font-family: 'Roboto';
+  cursor: pointer;
+  outline: invert;
+  transition: all .4s ease-out;
+  margin: 0.5vh;
+}
+h1-4:hover{
+  background-color: #B1A69B;
+  color: #39371F;
+  /* background-color: #000;
+  color: #eadd93; */
+}
 .user-cont{
-  
   text-align:initial;
   position: absolute;
-  top: 30px;
-  width: 10%;
-  height: 10px;
   color: #000;
   right: 21vh;
-  top:10vh;
+  margin-top:-78vh;
+  margin-right: 4vh;
   display: block; 
-  font-size: 20px;
   white-space: nowrap;
 }
 .fa-solid{
