--- a/hotelex/assets/css/pagina_inicial.css
+++ b/hotelex/assets/css/pagina_inicial.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Titillium+Web');
 @import url('https://fonts.cdnfonts.com/css/adumu-inline');
+@import url('https://fonts.googleapis.com/css?family=Lato');
 * {
   margin: 0;
   padding:0;
@@ -136,6 +137,18 @@ h1-4:hover{
   /* background-color: #000;
   color: #eadd93; */
 }
+h2{
+  position: absolute;
+  top:120vh;
+  left: 10vh;
+  font-size: 8vh;
+}
+h2-1{
+  position: absolute;
+  top:130vh;
+  left: 10vh;
+  font-size:4vh;
+}
 .user-cont{
   text-align:initial;
   position: absolute;
@@ -159,4 +172,86 @@ h1-4:hover{
   height: auto; /* Mantenha a proporção original para a altura */
   top:10px;
   position: absolute;
+}
+.quadradex {
+  display: flex;
+  top: 140vh;
+  left: 10vh;
+  position: absolute;
+}
+
+.box {
+  width: 400px;
+  height: 400px;
+  margin-right: 20px;
+  background-color: white;
+  overflow: hidden;
+  position: relative;
+}
+.ofertex{
+  background-color: #0A7642;
+  height: 4vh;
+  width: 20vh;
+  text-align:center;
+  white-space: nowrap;
+  border-radius: 20px;
+  color: #fff;
+  position: absolute;
+  top: 36vh;
+  left: 2vh;
+  display: block;
+}
+.ofertex2{
+  background-color: #0A7642;
+  height: 4vh;
+  width: 20vh;
+  text-align:center;
+  white-space: nowrap;
+  border-radius: 20px;
+  color: #fff;
+  position: absolute;
+  top: 190vh;
+  left: 90vh;
+  display: block;
+}
+h3{
+  position: relative;
+  top:0.6vh;
+  font-size:2.2vh;
+  font-weight:0;
+  font-family: 'Lato';
+}
+h3-1{
+  position: relative;
+  top:-7vh;
+  font-size:2.5vh;
+  font-weight:0;
+  left: 27vh;
+  font-family: 'Lato';
+}
+h3-2{
+  font-family: 'Lato';
+}
+.preço{
+  position: absolute;
+  top:35.5vh;
+  font-size: 40px;
+  left: 27vh;
+  margin-top: 0vh;
+  color: #0A7642;
+}
+.box img {
+  width:100%;
+  /* height: 100%; */
+  max-height: 300px;
+  height: auto;
+  display: block;
+}
+
+.text {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  color: black;
+  font-size: 16px;
 }
