--- a/hotelex/assets/css/signin.css
+++ b/hotelex/assets/css/signin.css
@@ -221,7 +221,7 @@ h1{
   margin-top: -38px;
   margin-left: 10px;
   transition: all .3s ease-out;
-  position: relative;
+  position: absolute;
 }
 /*posicao dos email e senha mas quando clica em baixex*/
 .label-float input:focus + label,
