--- a/hotelex/assets/css/dados_propri.css
+++ b/hotelex/assets/css/dados_propri.css
@@ -148,25 +148,25 @@ h1{
 }
 
 .label-float2 textarea{
-    width: 325%;
-    height: 100px;
-    display: flex;
-    border: 1;
-    border-bottom: 3px solid #000000;
-    border-top: 3px solid #000000;
-    border-left: 3px solid #000000;
-    border-right: 3px solid #000000;
-    background-color: transparent;
-    outline:none;
-    min-width: 50px;
-    font-size: 20px;
-    transition: all .3s ease-out;
-    border-radius:14px;
-    margin-top: 20px;
-    padding-top: 30px;
-    line-break: normal;
-    padding-left: 10px;
-    resize: none;
+  width: 325%;
+  height: 100px;
+  display: flex;
+  border: 1;
+  border-bottom: 3px solid #000000;
+  border-top: 3px solid #000000;
+  border-left: 3px solid #000000;
+  border-right: 3px solid #000000;
+  background-color: transparent;
+  outline:none;
+  min-width: 50px;
+  font-size: 20px;
+  transition: all .3s ease-out;
+  border-radius:14px;
+  margin-top: 20px;
+  padding-top: 30px;
+  line-break: normal;
+  padding-left: 10px;
+  resize: none;
   
 }
 .label-float2 label{
@@ -521,7 +521,7 @@ label h2-1{
 
 .mult-select-tag .drawer {
   position: absolute;
-  background: transparent;
+  background: #eadd93;
   max-height: 15rem;
   z-index: 40;
   top: 98%;
