pag.ini_com_link

--- a/hotelex/assets/css/pagina_inicial.css
+++ b/hotelex/assets/css/pagina_inicial.css
@@ -454,6 +454,10 @@ h6{
   height: auto;
   display: block;
 }
+a{
+  color: #000;
+  text-decoration: none;
+}
 .custom-size{
   width: 70vh; 
   height: 34vh; 
