--- a/hotelex/assets/css/dados_propri.css
+++ b/hotelex/assets/css/dados_propri.css
@@ -304,15 +304,15 @@ h2{
   color: #000000;
 }
 label h2{
-  position: absolute;
-  top: 28vh;
-  left: 94vh;
+  position: relative;
+  top: -37vh;
+  left: 62vh;
   white-space:nowrap;
 }
 label h2-1{
-  position: absolute;
-  top: 43vh;
-  left: 94vh;
+  position: relative;
+  top: -37vh;
+  left: 62vh;
   color: #000;
   font-family: 'Roboto';
   font-weight: bold;
@@ -448,9 +448,9 @@ label h2-1{
   --tw-shadow-color: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   --border-color:#000;
   font-family: Verdana, sans-serif;
-  top:-30vh;
+  top:-36vh;
   left: 61.7vh;
-  margin-bottom: 10vh;
+  margin-bottom: 3vh;
 }
 
 .mult-select-tag .wrapper {
