--- a/hotelex/assets/css/pagamentex.css
+++ b/hotelex/assets/css/pagamentex.css
@@ -15,17 +15,17 @@ body {
   
 }
 .produto-container{
-  display: flex;
+  /* display: flex; */
   width: 100%;
-  justify-content: space-around;
+  justify-content: center;
   color: #FFF;
 }
 /*fim dos slides*/
 .ladex h2{
-  position:relative;
+  position:absolute;
   width: 100%;
-  top: 20px;
-  left: 900px;
+  top: 8vh;
+  left: 0vh;
   font-size: 50px;
   display: flex;
   align-items:center;
@@ -34,18 +34,19 @@ body {
   font-family:'Adumu', sans-serif;
 }
 .ladex span{
-  position: relative;
+  position: absolute;
   font-weight: 100px;
   font-size: 20px;
   width: 100%;
-  left:600px;
-  top:-10px;
+  left:0vh;
+  top:18vh;
   nav-down: 10px;
   color: #eadd93;
   font-family:'Roboto', sans-serif;
   display: flex;
-  padding: 10px;
   white-space: nowrap;
+  align-items:center;
+  justify-content:center;
 }
 section{
   width: 350px;
@@ -66,12 +67,15 @@ section{
     background-color: #eadd93;
     padding: 180px;
     border-radius: 20%;
+    width: 100vh;
     height: 500px;
-    margin-left:2000px;
+    margin-left: 190vh;
     /*sombrex*/
     box-shadow: 3px 3px 1px 0px #00000060;
     text-align: center;
-    }
+    justify-content: center;
+    margin-top: 14vh;
+}
 .card2{
     background-color: #39371F;
     padding: 140px;
@@ -217,6 +221,27 @@ color: #fffdfd;
 
 /**/
 .justify-center{
-display: flex;
-justify-content: center;
+    display: flex;
+    justify-content: center;
 }  
+#qtdjuros{
+    color: #fff;
+    padding: 0.2em;
+    border: 1px solid #000000;
+    /* box-shadow: 2px 2px 2px rgba(0,0,0,0.2); */
+    display: block;
+    font-size: 100%;
+    border-radius: 6px;
+    background-color: #39371F;
+}
+.opcoes_credito select:focus{
+    /* color: #eadd93; */
+    color: #fff;
+    background: #000000;
+}
+.opcoes_credito{
+    color: #000000;
+    position: absolute;
+    top: -2px;
+    right:2px;
+}
